fix: spacing container ocupacao

--- a/src/pages/Admin/Admin.module.scss
+++ b/src/pages/Admin/Admin.module.scss
@@ -51,7 +51,7 @@
 .containerOcupacao {
   display: flex;
   margin-top: 24px;
-  width: 100%;
+  width: 24rem;
 }
 
 .button {
@@ -124,7 +124,7 @@
 
   .containerOcupacao {
     display: flex;
-    width: 30%;
+    width: 22rem;
     margin-top: 24px;
   }
 
